On Order Details page, show Item Name rather than or in addition to Item ID

--- a/client/Application/src/app/views/orders/detail/detail.component.html
+++ b/client/Application/src/app/views/orders/detail/detail.component.html
@@ -40,9 +40,10 @@
           </thead>
           <tbody>
             <tr *ngFor="let op of orderProducts$ | async">
-              <td class="nowrap">
-                {{ op.productId }}
+              <td class="text-right">
+                <span class="mono">{{ productName(op) }}</span>
                 <br />
+                <small class="text-muted">{{ op.productId }}</small>
               </td>
               <td class="text-right">
                 <span class="mono">{{ op.price | currency }}</span>
