--- a/client/Application/src/app/views/orders/detail/detail.component.html
+++ b/client/Application/src/app/views/orders/detail/detail.component.html
@@ -63,7 +63,7 @@
               <td class="text-right nowrap">
                 <span class="mono">{{ tax(op) | currency }}</span>
                 <br />
-                <small class="text-muted">Sales Tax 8.9%</small>
+                <small class="text-muted">Sales Tax {{ formatTaxRate }}%</small>
               </td>
               <td class="text-right">
                 <strong class="mono">{{ total(op) | currency }}</strong>
