--- a/client/Application/src/app/views/products/list/list.component.html
+++ b/client/Application/src/app/views/products/list/list.component.html
@@ -27,6 +27,16 @@
           <td mat-cell *matCellDef="let element">{{ element.sku }}</td>
         </ng-container>
 
+        <!-- Delete Column -->
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> Delete </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button (click)="onRemove(element)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
